minor fix footer h4 spacing

--- a/styles/_comp.typo.headings.less
+++ b/styles/_comp.typo.headings.less
@@ -235,5 +235,5 @@
 }
 .footer .c-ConferenceTagline,
 .year-prev-next h4 {
-  margin-bottom: 5px;
+  margin-bottom: 20px;
 }
